# FractalWave

./: .gitignore
MusicPlayer/: CMakeLists.txt  CenteredItemDelegate.h  CircularBuffer.h  ClickableWIdget.h  TrackItemDelegate.cpp  TrackItemDelegate.h  Worker.h  addcontentform.cpp  addcontentform.h  addcontentform.ui  audioplayback.cpp  audioplayback.h  centeredicondelegate.h  currenttracklistmanager.cpp  currenttracklistmanager.h  displayplaylists.cpp  displayplaylists.h  displayplaylists.ui  homepage.cpp  homepage.h  homepage.ui  librarymanager.cpp  librarymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediacontroller.cpp  mediacontroller.h  player.cpp  player.h  player.ui  playlist.cpp  playlist.h  playlistitemdelegate.h  playlistlistdelegate.cpp  playlistlistdelegate.h  resourcecs.qrc  resources.qrc  settingspage.cpp  (+8 more)
MusicPlayer/helper/: delegatehelper.h  directoryhelper.h  qsshelper.h  sidebarhelper.h
MusicPlayer/styles/: homepage.qss  player.qss  sidebar.qss
Visualizer/Assets/Materials/: Blue.mat  RayMarching_Mat.mat  Red.mat
Visualizer/Assets/RenderFeatures/: BlurRendererFeature.cs  BlurRendererPass.cs  RayMarchingPass.cs  RayMarchingRendererFeature.cs  Temp.cs
Visualizer/Assets/Scenes/: SampleScene.unity
Visualizer/Assets/Scripts/: FractalVisualizer.cs  RenderFlag.cs
Visualizer/Assets/Settings/: DefaultVolumeProfile.asset  PC_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
Visualizer/Assets/Shaders/: RayMarching.shader
Visualizer/ProjectSettings/: ProjectSettings.asset
